Tot en met hoofdtstuk 4

--- a/.env.properties
+++ b/.env.properties
@@ -1,5 +1,5 @@
 #Change manually
-GITPOD_FRONTEND_URL=
+GITPOD_FRONTEND_URL=https://4200-fluteijnutr-valtimoacad-j72w626gypx.ws-eu114.gitpod.io
 
 #Don't change
 SPRING_PROFILES_ACTIVE=default
